# credit-risk-pd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  ghcr.yml  push-ecr.yml
.streamlit/: config.toml
data/_artifacts_preview/: eda_cleaned_schema.json  eda_summary.json  feature_spec_v1.json
data/artifacts/: column_roles_v1.json  eda_summary.json  engineered_features_manifest_v1.json  feature_spec_v1.json  missingness_profile_v1.json  schema_raw_accepted_v1.json  target_definition_v1.json
data/raw/: test.csv
docker/: Dockerfile  Dockerfile.api  Dockerfile.app
models/artifacts/: .gitkeep  gbdt_sigmoid_uncalibrated__20251217T185001Z__deployment_assumptions.json  gbdt_sigmoid_uncalibrated__20251217T185001Z__serving_schema.json
models/bundles/pd_hgb_mp__20251218T203133Z/: feature_spec_v1.json  metadata.json
models/metadata/: .gitkeep  best_params.json  evaluation_metrics.json  gbdt_sigmoid_uncalibrated__20251217T185001Z__metadata.json  hparam_search_results.json  modeling_contract_v1.json  pd_model_metadata.json  shap_global_importance.json
notebooks/: 01_eda.ipynb  02_fe.ipynb  03_mp.ipynb
src/: config.py  validate_pipeline.py
src/data/: download_kaggle.py  load_data.py  preprocess.py
src/features/: build_features.py  transforms.py
src/models/: datasets.py  evaluate.py  explain.py  load.py  monitor.py  train.py  tune.py
src/serving/: api.py  registry.py  schemas.py  shap_utils.py
streamlit_app/: app.py
streamlit_app/assets/: brand.css
tests/: generate_synthetic_data.py  test_api.py  test_data.py  test_data_validation.py  test_download_kaggle.py  test_features.py  test_guardrails.py  test_load_data.py  test_models.py  test_monitor.py  test_preprocess.py  test_validate_pipeline.py
