[project]
name = "credit-risk-pd"
version = "0.1.0"
description = "End-to-end credit risk scoring system for Probability of Default (PD) prediction."
authors = [
  { name = "Mark Harris" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.0.0",
  "pandas>=2.0.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.0",
  "lightgbm>=4.0.0",
  "shap>=0.50.0",
  "matplotlib>=3.8.0",
  "python-dotenv>=1.0.0",
  "joblib>=1.3.0",
  "httpx>=0.27.0",
  "streamlit>=1.36.0",
  "altair>=5.0.0",
  "kaggle>=1.5.0",
  "seaborn>=0.13.2",
  "missingno>=0.5.2",
  "pyarrow>=21.0.0",
  "threadpoolctl>=3.6.0",
]

[project.optional-dependencies]
ui = [
  "streamlit>=1.36.0",
]

[project.urls]
Homepage = "https://github.com/mc-harris1/credit-risk-pd"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pre-commit>=3.8.0",
  "ipykernel>=7.1.0",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
]
ignore = [
  "E203",
  "E501",
  "B008", # python-bugbear specific
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
